<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="finished_events">Finished events</string>
    <string name="owner_text">Diselenggarakan oleh: %1$s</string>
    <string name="detail_event">Detail event</string>
    <string name="quota">Sisa kuota: %1$s</string>
    <string name="begin_time">Mulai: %1$s</string>
    <string name="end_time">Selesai: %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="description">Deskripsi:</string>
    <string name="location">Lokasi: %1$s</string>
    <string name="register">Register</string>
    <string name="search_event">Search event</string>
    <string name="recommended_for_you" tools:keep="@string/recommended_for_you">Recommended for you</string>
    <string name="top_results">Top results</string>
    <string name="no_data">No data</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_events">Favourite events</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="enable_notification">Enable notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connected">Internet Connected</string>
    <string name="still_no_internet">Still no internet connection</string>
    <string name="retry">Retry</string>
    <string name="notification_message">Recommendation event for you on %1$s</string>
</resources>