<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="8dp"
        app:navigationIcon="@drawable/arrow_left_02_stroke_rounded"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:fontFamily="@font/quicksand_bold"
                android:textStyle="bold"
                android:textSize="22sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/quicksand_semibold"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_dark_mode"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="-20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/enable_dark_mode"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:thumbTint="@color/primary_color"
            app:trackTint="?attr/colorOnBackground"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>