<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="8dp"
                app:navigationIcon="@drawable/arrow_left_02_stroke_rounded"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_event"
                        android:fontFamily="@font/quicksand_bold"
                        android:textStyle="bold"
                        android:textSize="22sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/ic_setting"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:src="@drawable/settings_02_stroke_rounded"
                        android:contentDescription="Icon setting"
                        tools:ignore="HardcodedText"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:id="@+id/iv_image_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="Event image cover"
                    tools:src="@drawable/noimage"
                    android:scaleType="centerCrop"
                    tools:ignore="HardcodedText" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_bold"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                tools:text="DevCoach 154 : ML Android | MediaPipe: Paket Lengkap dari Google untuk Terapkan ML di Android"/>

            <TextView
                android:id="@+id/tv_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                tools:text="Oleh: Dicoding Event"/>

            <TextView
                android:id="@+id/tv_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="16sp"
                tools:text="Sisa kuota: 567"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="16sp"
                tools:text="Lokasi: Online"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="16sp"
                tools:text="Category: Seminar"/>

            <TextView
                android:id="@+id/tv_begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="16sp"
                tools:text="Mulai: 2024-06-07 16:00:00"/>

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                tools:text="Selesai: 2024-06-07 16:00:00"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/tv_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="16sp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="14sp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                tools:text=""/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/quicksand_bold"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal" />

</FrameLayout>
